@@ -134,8 +134,7 @@ Extra attributes can be specified with the syntax ``attribute="value"``:
 
     {% image page.photo width-400 class="foo" id="bar" %}
 
-No validation is performed on attributes added in this way so it's possible to add `src`, `width`, `height` and `alt` of your own that might conflict with those generated by the tag itself.
-
+You can set a more relevant `alt` attribute this way, overriding the one automatically generated from the title of the image. The `src`, `width`, and `height` attributes can also be overridden, if necessary.
 
 **2. Generating the image "as foo" to access individual properties**
 
