@@ -6,7 +6,8 @@ Changelog
 
  * Added `WAGTAIL_PASSWORD_RESET_ENABLED` setting to allow password resets to be disabled independently of the password management interface (John Draper)
  * Updated fonts for more comprehensive Unicode support
- * Added ``.alt`` attribute to image renditions
+ * Added `.alt` attribute to image renditions
+ * The default `src`, `width`, `height` and `alt` attributes can now be overridden by attributes passed to the `{% image %}` tag
  * Fix: HTTP cache purge now works again on Python 2 (Mitchel Cabuloy)
 
 1.2 (12.11.2015)
